# rinha_backend_2024_q1

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: db.rs  handlers.rs  main.rs  models.rs  routes.rs
