[package]
name = "rinha_backend_2024_q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
