[package]
name = "rinha_backend_2024_q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-sqlite = { version = "0.2.2", features = ["chrono"] }
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
futures = "0.3"
